--- a/css/style.css
+++ b/css/style.css
@@ -47,17 +47,17 @@ body {
     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 }
 
-.logo-box {
+.header__logo-box {
     position: absolute;
     top: 4rem;
     left: 4rem;
 }
 
-.logo {
+.header__logo {
     height: 3.5rem;
 }
 
-.text-box {
+.header__text-box {
     position: absolute;
     top: 40%;
     left: 50%;
@@ -77,7 +77,7 @@ body {
     display: block;
 }
 
-.heading-primary-main {
+.heading-primary--main {
     font-size: 6rem;
     font-weight: 400;
     letter-spacing: 3.5rem;
@@ -85,7 +85,7 @@ body {
     animation: moveInLeft 1s ease-out
 }
 
-.heading-primary-sub {
+.heading-primary--sub {
     font-size: 2rem;
     font-weight: 700;
     letter-spacing: 1.75rem;
@@ -162,7 +162,7 @@ body {
     box-shadow: 0 .5rem 1rem var(--btn-box-shadow-color);
 }
 
-.btn-white {
+.btn--white {
     background-color: var(--body-white);
     color: var(--body-text-color);
 }
@@ -180,7 +180,7 @@ body {
     transition: all .4s;
 }
 
-.btn-white::after {
+.btn--white::after {
     background-color: var(--body-white);
 }
 
@@ -189,7 +189,7 @@ body {
     opacity: 0;
 }
 
-.btn-animated {
+.btn--animated {
     animation: moveInBottom .5s ease-out .75s;
     animation-fill-mode: backwards;
 }
