--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,3 +1,4 @@
+// COLORS
 $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
@@ -5,3 +6,13 @@ $color-primary-dark: #28b485;
 $color-grey-dark: #777777;
 $color-white: #ffffff;
 $color-black: #000000;
+$color-grey-light-1: #f7f7f7;
+
+// FONT
+$default-font-size: 1.6rem;
+
+// GRID
+$grid-width: 114rem;
+$gutter-vertical: 8rem;
+$gutter-horizontal: 6rem;
+$gutter-width: 6rem;
