--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -9,6 +9,8 @@ body {
 .heading-primary {
     color: $color-white;
     text-transform: uppercase;
+    display: flex;
+    flex-direction: column;
 
     backface-visibility: hidden;
     padding-bottom: 6rem;
