feat: feature section

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,7 @@
 // Components part
 @import "components/button";
 @import "components/composition";
+@import "components/feature-box";
 
 // Layout part
 @import "layout/header";
