--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@
 
 // Components part
 @import "components/button";
+@import "components/card";
 @import "components/composition";
 @import "components/feature-box";
 
