--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -10,6 +10,7 @@ $color-tertiary-light: #2998ff;
 $color-tertiary-dark: #5643fa;
 
 $color-grey-dark: #777777;
+$color-grey-dark-2: #999999;
 $color-white: #ffffff;
 $color-black: #000000;
 $color-grey-light-1: #f7f7f7;
