--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,6 +21,7 @@
 // Layout part
 @import "layout/header";
 @import "layout/grid";
+@import "layout/footer";
 
 // Pages part
 @import "pages/home";
