--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -11,6 +11,7 @@ $color-tertiary-dark: #5643fa;
 
 $color-grey-dark: #777777;
 $color-grey-dark-2: #999999;
+$color-grey-dark-3: #333333;
 $color-white: #ffffff;
 $color-black: #000000;
 $color-grey-light-1: #f7f7f7;
