--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -136,10 +136,7 @@
 
     // BACK SIDE STYLING
     &__cta {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        @include absoluteCenter;
         width: 90%;
         text-align: center;
     }
