--- a/sass/main.scss
+++ b/sass/main.scss
@@ -22,6 +22,7 @@
 @import "layout/header";
 @import "layout/grid";
 @import "layout/footer";
+@import "layout/navigation";
 
 // Pages part
 @import "pages/home";
